Fixed logo container boxes + adding overflow hidden to logo container broke display

--- a/css/app.css
+++ b/css/app.css
@@ -23,7 +23,6 @@
 .logo-container {
   padding-bottom: 50px;
   padding-top: 50px;
-  overflow: hidden;
 }
 
 .client-pop-up-hover {
